--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,10 @@ numpy
 matplotlib
 seaborn
 scipy
+
+streamlit>=1.25.0
+yfinance>=0.2.35
+scikit-learn>=1.3.0
+plotly>=5.15.0
+pandas>=2.0.0
+numpy>=1.25.0
