--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,12 @@ matplotlib
 seaborn
 scipy
 
+scikit-learn
+plotly
+lxml
+html5lib
+beautifulsoup4
+
 streamlit>=1.25.0
 yfinance>=0.2.35
 scikit-learn>=1.3.0
